portfolio/src/main/webapp/style.css
body {
    background-color: #0e0e0e;
    margin: 0px 0px 0px 0px;
    cursor:crosshair;
}

#starCanvas {
    position: absolute;
    top: 0px;
    left: 0px;
    height: 200vh;
    display: block;
    width: 100%;
    background-color: #0e0e0e;
    z-index: -1;
}

#starContainer{
    height:200vh;
    position: relative;
    justify-content: center;
    display: block;
}

#landing {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    height:100vh;
}

#landing h1{
    font-family: 'Libre Baskerville', serif;
    color:white;
    font-size: 80px;
    user-select: none;
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
}

#landing p{
    text-align: center;
}

#landing button {
    background-color: #0b0b0b;
    width: 200px;
    height: 44px;
    color: white;
    border: 1px solid;
    border-radius: 44px;
    margin-left:calc((100% - 200px)/2);
    transition: 0.25s;
}

#landing button:hover{
    background-color: orange;
}

#landingContent{
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

#experiences {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 150px 150px 150px 150px;
    align-items: center;
    justify-items: center;
    width: 1250px;
    margin-left: calc((100% - 1250px)/2);
    text-align: center;
    color:white;
}

#experiences h1{
    font-family: 'Libre Baskerville', serif;
    color:white;
    font-size: 45px;
    user-select: none;
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
    grid-column-start: 1;
    grid-column-end:3;
}

#experiences h2{
    font-size: 35px;
    font-family: 'Libre Baskerville', serif;
    margin-bottom: 15px;
    margin-top: 0px;
}

#experiences h4{
    margin-top: 0px;
    margin-bottom:0px;
    font-size: 20px;
    font-family: 'Karla', sans-serif;
    font-weight: 100;

}

#experienceImg{
    height:100%;
    grid-row-start: 2;
    grid-row-end:5;
    grid-column-start: 2;
    grid-column-end:3;
}

#experienceImg img{
    height: 90%;
    border-radius: 10%;
}

#intuit{
    grid-row-start: 2;
    transition: transform .3s ease-out;
}

#intuit:hover{
    transform: translate(0, -5px);   
}

#google{
    grid-row-start: 3;
    transition: transform .3s ease-out;
}

#google:hover{
    transform: translate(0, -5px);
}

#cipher {
    grid-row-start: 4;
    transition: transform .3s ease-out;
}

#cipher:hover{
    transform: translate(0, -5px);
}

#projects {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto auto auto auto auto;
    width: 80%;
    margin-left:10%;
    margin-top:200px;

}

#projects h1{
    font-family: 'Libre Baskerville', serif;
    color:white;
    font-size: 45px;
    user-select: none;
    text-align: center;
    margin-top: 0px;
    margin-bottom: 0px;
    grid-column-start: 1;
    grid-column-end:3;
}

p {
    color:white;
    font-weight: 100;
    font-family: 'Karla', sans-serif;
    font-size: 25px;
    line-height: 34px;
    user-select: none;
}

#about-content {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    display: grid;
    grid-template-columns: 25% 25% 50%;
}

#about-content img{
    grid-column-start: 1;
    width: 100%;
    align-self: center;
}

#about-content #text {
    grid-column-start: 2;
    width:90%;
    margin-left: 5%;
}

#text h1{
    margin-top:10px;
}


#text p {
    font-size: 18px;
    line-height: 25px;
}



#about-content h1 {
    color:white;
    font-family: 'Libre Baskerville', serif;
    font-size: 40px;
    user-select: none;
}

#contactContainer {
    background-color: #ffa502;;
}

#contactContent{
    width: 90%;
    margin-left: 5%;
    display:grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto auto auto auto auto;
}

#contactContent h1{
    font-size:40px;
    margin-top:10px;
    margin-bottom:10px;
    grid-column-start: 1;
    grid-column-end: 3;
}


#contactContent p{
    align-self:center;
    margin-top: 5px;
    margin-bottom:5px;
}

#contactContent a{
    text-decoration: none;
}

#contactBlurb {
    margin-top:0px;
    margin-bottom:15px !important;
    grid-column-start: 1;
    grid-column-end: 3;
}

#contactContent i{
    justify-self: center;
    align-self: center;
    color:white
}

#igIcon{
    grid-row-start: 3;
}

#githubIcon{
    grid-row-start: 5;
    grid-column-start: 1;
}

#twitterIcon{
    grid-row-start: 4;
    grid-column-start: 1;
}

#igHandle {
    grid-column-start: 2;
    grid-row-start: 3;
}

#twitterHandle {
    grid-column-start: 2;
    grid-row-start: 4;
}

#githubHandle {
    grid-column-start: 2;
    grid-row-start: 5;
}

#imgTrigger{
    border-bottom: white dotted;
}

#imgTrigger:hover {
    border-bottom: none;
}


#greeting-container {
  margin-top: 20px;
}

#messageContainer{
    margin-left: auto;
    margin-right: auto;
    width: 850px;
}

